# untitled-game

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
resources/shaders/gl3/: FragmentShader.glsl  VertexShader.glsl
resources/sprite_animations/: human_axe_down.json  human_axe_right.json  human_carry_right.json  human_fishingrod_left.json  human_fishingrod_right.json  human_fishingrod_up.json  human_hoe_down.json  human_hoe_right.json  human_idle_right.json  human_pickup_down.json  human_putdown_left.json  human_walk_down.json  human_watercan_left.json  human_watercan_up.json
resources/sprite_animations/human/: carry.json  hoe.json  human_axe_left.json  human_axe_up.json  human_carry_down.json  human_carry_left.json  human_carry_up.json  human_fishingrod_down.json  human_hoe_left.json  human_hoe_up.json  human_idle_down.json  human_idle_left.json  human_idle_up.json  human_pickaxe_down.json  human_pickaxe_left.json  human_pickaxe_right.json  human_pickaxe_up.json  human_pickup_left.json  human_pickup_right.json  human_pickup_up.json  human_putdown_down.json  human_putdown_right.json  human_putdown_up.json  human_walk_left.json  human_walk_right.json  human_walk_up.json  human_watercan_down.json  human_watercan_right.json  idle.json  pickup.json  putdown.json  swing_axe.json  swing_fishing_rod.json  swing_pickaxe.json  walk.json  water.json
src/: Main.cpp
src/Core/: Application.cpp  Application.hpp  MainLoop.cpp  MainLoop.hpp  MathUtils.hpp  Profiler.cpp  Profiler.hpp  Timer.cpp  Timer.hpp  UUID.cpp  UUID.hpp
src/Input/: Input.cpp  Input.hpp
src/Platform/Box2D/: Box2DPhysicsServer.cpp
src/Platform/GL3/: GL3RenderingServer.cpp  GL3Shader.cpp  GL3Shader.hpp  GL3Texture.cpp  GL3Texture.hpp  GL3VertexArray.cpp  GL3VertexArray.hpp
src/Platform/GLFW/: GLFWApplication.cpp  GLFWApplication.hpp  GLFWCallbacks.cpp  GLFWCallbacks.hpp  GLFWDisplayServer.cpp
src/Renderer/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/Resource/: ResourceManager.cpp  ResourceManager.hpp  SpriteAnimation.cpp  SpriteAnimation.hpp  Texture.cpp  Texture.hpp
src/Scene/: Components.hpp  Components_Player.hpp  Scene.cpp  Scene.hpp  Scene_Player.cpp
src/Server/: DisplayServer.cpp  DisplayServer.hpp  PhysicsServer.cpp  PhysicsServer.hpp  RenderingServer.cpp  RenderingServer.hpp
src/System/: Components.hpp  Components_Player.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  SceneSystem.cpp  SceneSystem.hpp
tools/: generate_file_system.py  generate_shader_headers.py
